infra/gatekeeper/templates/no-root-user.yaml
apiVersion: templates.gatekeeper.sh/v1
kind: ConstraintTemplate
metadata:
  name: k8snorootuser
spec:
  crd:
    spec:
      names:
        kind: K8sNoRootUser
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package k8snorootuser

        violation[{"msg": msg}] {
          c := input.review.object.spec.template.spec.containers[_]
          c.securityContext.runAsUser == 0
          msg := sprintf("Container '%v' must not run as UID 0 / root (CK-02)", [c.name])
        }
