infra/gatekeeper/templates/require-resource-limits.yaml
apiVersion: templates.gatekeeper.sh/v1
kind: ConstraintTemplate
metadata:
  name: k8srequireresourcelimits
spec:
  crd:
    spec:
      names:
        kind: K8sRequireResourceLimits
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package k8srequireresourcelimits

        violation[{"msg": msg}] {
          c := input.review.object.spec.template.spec.containers[_]
          not c.resources.limits.cpu
          msg := sprintf("Container '%v' is missing CPU limits (CK-05)", [c.name])
        }

        violation[{"msg": msg}] {
          c := input.review.object.spec.template.spec.containers[_]
          not c.resources.limits.memory
          msg := sprintf("Container '%v' is missing memory limits (CK-05)", [c.name])
        }
